set up products.js to render all crystals, fixed css to wrap display

--- a/src/products.css
+++ b/src/products.css
@@ -1,6 +1,7 @@
 #crystals {
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
 }
 
 #crystals li {
@@ -21,5 +22,9 @@
 
 #crystals img {
     height: 40%;
+}
+
+button {
+    font-family: 'Dancing Script', cursive;
 }
 
